Calculadora de años con mundial

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ciclos e Iteraciones</title>
 </head>
 <body>
-    <h1>Bucles e Iteraciones</h1>
+    <h1>Ciclos e Iteraciones</h1>
     <script src="./Js/main.js"></script>
 </body>
 </html>
